[gd_scene load_steps=6 format=3 uid="uid://bqf02v5eog068"]

[ext_resource type="Script" uid="uid://ceqdowk3eu154" path="res://Singletons/Scripts/scene_manager.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://c7ckkfc3bhrkc" path="res://Scenes/UI/quit_confirmation_dialog.tscn" id="1_quit_dialog_scene"]
[ext_resource type="PackedScene" uid="uid://b4b5bm4br5j6a" path="res://Scenes/UI/pause_menu.tscn" id="1_rrvs5"]
[ext_resource type="PackedScene" uid="uid://cgrv6f7vj3l3g" path="res://Scenes/UI/main_menu.tscn" id="1_t4j2j"]
[ext_resource type="PackedScene" uid="uid://xsfe4eohtxl4" path="res://Scenes/UI/options_menu.tscn" id="4_grbf0"]

[node name="SceneManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_abcde")

[node name="GameViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameViewport" type="SubViewport" parent="GameViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
use_hdr_2d = true
audio_listener_enable_2d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="MenuViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="GameViewport" type="SubViewport" parent="MenuViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
use_hdr_2d = true
audio_listener_enable_2d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Control" type="Control" parent="MenuViewportContainer/GameViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="MenuViewportContainer/GameViewport/Control" instance=ExtResource("1_t4j2j")]
layout_mode = 1

[node name="PauseMenu" parent="MenuViewportContainer/GameViewport/Control" instance=ExtResource("1_rrvs5")]
visible = false
z_index = 10
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OptionsMenu" parent="MenuViewportContainer/GameViewport/Control" instance=ExtResource("4_grbf0")]
visible = false
layout_mode = 1

[node name="QuitConfirmationDialog" parent="MenuViewportContainer/GameViewport/Control" instance=ExtResource("1_quit_dialog_scene")]
visible = false
z_index = 10
layout_mode = 1
offset_left = -160.0
offset_top = -85.0
offset_right = 160.0
offset_bottom = 85.0
size_flags_horizontal = 4
size_flags_vertical = 4
